--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "fuse.js": "^3.2.1",
     "vue": "^2.5.2",
-    "vue-material": "^0.8.1",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
